--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,17 @@
 {
-    "manifest_version": 2,
-    "name": "Github Jira Pull Request helper",
-    "version": "0.1",
-    "description": "A browser extension that autofills certain fields when a pull request is opened in Github.",
-    "author": "Jijo James",
-    "permissions": ["contextMenus"],
-    "background":  {
-      "scripts": ["script.js"]
+  "manifest_version": 2,
+  "name": "Github Jira Pull Request helper",
+  "version": "0.1",
+  "description": "A browser extension that autofills certain fields when a pull request is opened in Github.",
+  "author": "Jijo James",
+  "permissions": ["contextMenus"],
+  "background": {
+    "scripts": ["script.js"]
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://*.github.com/*"],
+      "js": ["populate.js"]
     }
-  }
+  ]
+}
