--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "Github Jira Pull Request helper",
+  "name": "Github - Jira Pull Request helper",
   "version": "0.1",
   "description": "A browser extension that autofills certain fields when a pull request is opened in Github.",
   "author": "Jijo James",
@@ -11,7 +11,7 @@
   "content_scripts": [
     {
       "matches": ["https://*.github.com/*"],
-      "js": ["pr-helper-config.js", "populate.js"]
+      "js": ["config.js", "populate.js"]
     }
   ]
 }
