--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,8 @@
   "content_scripts": [
     {
       "matches": ["https://*.github.com/*"],
-      "js": ["config.js", "populate.js"]
+      "js": ["config.js", "populate.js"],
+      "run_at": "document_start"
     }
   ]
 }
