--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Github - Jira Pull Request helper",
   "version": "1.0",
   "description": "A browser extension that autofills certain fields when a pull request is opened in Github.",
   "author": "Jijo James",
   "permissions": ["contextMenus"],
   "background": {
-    "scripts": ["script.js"]
+    "service_worker": "script.js"
   },
   "content_scripts": [
     {
